tests/baselines/reference/numeric-separator-literal-dds-nsl-dds-dunder-err.errors.txt
numeric-separator-literal-dds-nsl-dds-dunder-err.ts(25,4): error TS6189: Multiple consecutive numeric separators are not permitted.


==== numeric-separator-literal-dds-nsl-dds-dunder-err.ts (1 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear adjacent to another
      NumericLiteralSeparator in DecimalIntegerLiteral
    info: |
      NumericLiteralSeparator ::
        _
    
      DecimalIntegerLiteral ::
        ...
        NonZeroDigit NumericLiteralSeparator_opt DecimalDigits
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    10__0123456789
       ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    